k8s/istio/hello-world-destination-rule-cb.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-world
spec:
  host: hello-world-service
  subsets:
    - name: production
      labels: 
        version: production
      trafficPolicy:
        connectionPool:
          tcp:
            maxConnections: 1
        outlierDetection:
          consecutiveErrors: 1
          interval: 5s
          baseEjectionTime: 15m
